Modifications to stm topography: - Added the fast-fourier transform feature. - Added line-profile information. - Code is quite clunky, needs to be cleaned up.
Signed-off-by: c0deta1ker <procopios.constantinou.16@ucl.ac.uk>

--- a/stm_analysis/stm_analysis_notebook.ipynb
+++ b/stm_analysis/stm_analysis_notebook.ipynb
@@ -134,6 +134,7 @@
    "outputs": [],
    "source": [
     "# Forcing all figures to be plotted in-line throughout the JuPyter notebook\n",
+    "# %matplotlib notebook\n",
     "%matplotlib inline\n",
     "# Importing all the necessary python modules\n",
     "import sys                                   # Import the system parameters\n",
@@ -153,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71acc2740bd34b499f976b73c779e2b4"
+       "model_id": "b324e6b3787f4a048e976467c32f9837"
       }
      },
      "metadata": {},
@@ -162,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d3b65a5ada4be9b27403ffad6ea40a"
+       "model_id": "c76642c2d7ac42fea0c5ccdac4ddecd5"
       }
      },
      "metadata": {},
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -245,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2a24ffe44094e4983bf8248637d27c9"
+       "model_id": "11047dcf505d4e80893b5ec5abc86763"
       }
      },
      "metadata": {},
@@ -254,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08203bb7e96c4d7098a86337b4180dfb"
+       "model_id": "ddfae3dbd3684a818c1b876443b85939"
       }
      },
      "metadata": {},
@@ -268,12 +269,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 - Fast-Fourier Transform (FFT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "stt_fft_1 = stm.STT_fft(stt_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "### 2.2 - 1D line profiles"
+    "### 2.3 - 1D line profile"
    ]
   },
   {
@@ -290,32 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307a6cbc8a2c441eb2e7fdbafeab7edc"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ced11efeab94076b3f7d17a831d7d3a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Defining the line profile across the stm topography scan\n",
     "stt_line_1 = stm.STT_lineprof(stt_1)"
@@ -325,7 +326,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -333,81 +336,6 @@
     "def f(x, a, b, c)\n",
     "    import numpy as np\n",
     "    return a*np.sin(b*x+c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 - 1D line profile statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "points = np.array([[1, 1],\n",
-    "                   [6, 5]])\n",
-    "\n",
-    "A = stt_line_1.nm2pnt(points[1][0], stt_line_1.topo_data)\n",
-    "\n",
-    "np.max(stt_line_1.line_prof_y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### 2.3 - Fast Fourier Transform"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Perform a fourier transform of the stm topography image produced."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### 2.5 - 3D topography profile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "1D and 2D FFT filtering"
    ]
   },
   {
